untask-sh/crates/untask-cli/tests/snapshots/cli_snapshot_test__search_json.snap
---
source: crates/untask-cli/tests/cli_snapshot_test.rs
assertion_line: 192
expression: redacted
---
[
  {
    "kind": "task",
    "line": 1,
    "path": "[path]",
    "snippet": "**Deploy** app",
    "title": "Deploy app"
  },
  {
    "kind": "doc",
    "line": 1,
    "path": "[path]",
    "snippet": "# **Deploy**",
    "title": "deploy.md"
  }
]
