untask-sh/crates/untask-cli/tests/snapshots/cli_snapshot_test__show_json.snap
---
source: crates/untask-cli/tests/cli_snapshot_test.rs
assertion_line: 166
expression: redacted
---
{
  "body": "- [x] Design schema\n- [ ] Add endpoints\n- [ ] Add middleware\n",
  "created": "[timestamp]",
  "id": 1,
  "position": 1.0,
  "priority": "high",
  "status": "backlog",
  "subtask_progress": {
    "completed": 1,
    "total": 3
  },
  "tags": [
    "backend",
    "security"
  ],
  "title": "Implement auth",
  "updated": "[timestamp]"
}
